--- a/packages/prop-house-webapp/src/pages/Base/Base.module.css
+++ b/packages/prop-house-webapp/src/pages/Base/Base.module.css
@@ -1,3 +1,6 @@
 .sectionTitle {
   color: var(--brand-black);
 }
+.loadMoreBtn {
+  width: 100%;
+}
